--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ anyio==4.4.0
 attrs==24.2.0
 certifi==2024.7.4
 charset-normalizer==3.3.2
-colorama==0.4.6
+easy @ git+https://github.com/Klipar/easy.git@dab43871a031c4d0fa4af471158d4c6f689bc1c3
 frozenlist==1.4.1
 h11==0.14.0
 httpcore==1.0.5
