--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,9 +5,9 @@
             "name": "Python Debugger: Current File with Arguments",
             "type": "debugpy",
             "request": "launch",
-            "program": "main.py",
+            "program": "tradingBotLauncher.py",
             "console": "integratedTerminal",
-            "args": "Configs/work.json"
+            "args": ""
         }
     ]
 }
